--- a/assignment02.ipynb
+++ b/assignment02.ipynb
@@ -4,8 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 휴먼인터페이스 영상 Assignment02\n",
-    "## Python Programming - Taylor Approximation\n",
+    "# Mathematical Foundations for Computer Vision and Machine Learning \n",
+    "# Assignment02 - Python Programming \n",
+    "## Taylor Approximation\n",
     "## Name: Jinwoo Jeon\n",
     "## Student ID: 20143954\n",
     "---\n"
